--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-ai-gov-&-finance-news-hub",
+  "name": "creative-mind",
   "private": true,
   "version": "0.0.0",
   "type": "module",
