--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.22.3",
-    "@google/genai": "1.34.0"
+    "@google/genai": "1.34.0",
+    "mongodb": "^6.3.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
