--- a/package.json
+++ b/package.json
@@ -12,12 +12,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.22.3",
-    "@google/genai": "1.34.0",
-    "mongodb": "^6.3.0"
+    "@google/genai": "1.34.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
-    "@vercel/node": "^3.0.0",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
